--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
                     </div>
 
+                    <div class="carousel__elemento">
+                        <img src="img_video/pelicula9.jpg" alt="pelicula5">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+
+                    <div class="carousel__elemento">
+                        <img src="img_video/pelicula10.jpg" alt="pelicula6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+
+                    <div class="carousel__elemento">
+                        <img src="img_video/pelicula11.jpg" alt="pelicula7">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+
+                    <div class="carousel__elemento">
+                        <img src="img_video/pelicula12.jpg" alt="pelicula8">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                    </div>
+
                 </div>
 
                 <button arial-label="Siguiente" class="carousel__siguiente">
@@ -132,10 +152,8 @@
             <div role="tablist" class="carousel__indicadores"></div>
         </div>
 
-
-
         <!-- NEWS CARDS 1 -->
-        <div class="news-cards">
+        <!-- <div class="news-cards">
             <div>
                 <img src="img/noticia1.jpg" alt="">
                 <h3>Lorem ipsum dolor sit amet.</h3>
@@ -167,7 +185,7 @@
                     recusandae animi provident explicabo assumenda quam in!</p>
                 <a href="#">Lear More <i class="fas fa-angle-double-right"></i></a>
             </div>
-        </div>
+        </div> -->
 
         <!-- CARD BANNER ONE -->
         <section class="cards-banner-one">
